test/1.2/errors/T_ELTYPE.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
method init() {
    /// ERROR ELTYPE
    log "foo": "hej";

    /// ERROR ELTYPE
    log foo: "hej";

    /// ERROR ELTYPE
    log unimplemented: "hej";

    /// ERROR ELTYPE
    log "unimpl": "hej";

    /// ERROR ELTYPE
    log spec_violation: "hej";

    /// ERROR ELTYPE
    log "spec_viol": "hej";

    // bug 18204
    /// ERROR ELTYPE
    log "undefined": "nil";
}
